• Updated filter tags and mobile-cta to be inside .main-city-list-wrap; • Updated featured props flip animation to only flip on hovering for desktop screens and to flip on clicks for mobile/tables; • Updated layout slightly for login page; • Updated bootstrap css to only have hover affect for carousel arrows for desktop screens (trying to fix an issue on mobile screens that makes you have to tap twice to trigger the carousel to slide

--- a/client/templates/city/city.styl
+++ b/client/templates/city/city.styl
@@ -40,14 +40,10 @@
       width 75% !important
 
   .filter-options
-    margin 5px 15px 0
+    margin 0 15px
     max-width 94%
-    @media screen and (min-width: 768px)
-      margin-top 15px
-    @media screen and (min-width: 992px)
-      margin-left 25px
-    @media screen and (min-width: 1200px)
-      margin-left 30px
+    @media screen and (min-width: 768px) and (max-width: 1199px)
+      margin-top 5px
 
     i
       margin-right 8px
@@ -65,7 +61,7 @@
       text-transform capitalize
       @media screen and (min-width: 768px)
         font-size 12px
-        padding .4em 1.1em .35em
+        padding .4em 1.1em .36em
         margin 0 12px 0 0
 
 
@@ -74,14 +70,12 @@
     border-radius 8px
     padding 5px 15px 15px
     text-align center
-    margin 30px auto 20px
+    margin 25px auto 20px
     max-width 94%
     position relative
     @media screen and (min-width: 600px)
       display none
       visibility hidden
-    .filter-options ~ &
-      margin-top 50px
 
     h3,h4,p
       margin-left -12px
