--- a/client/templates/city/cityHeader/cityHeader.styl
+++ b/client/templates/city/cityHeader/cityHeader.styl
@@ -112,7 +112,7 @@
     .city-sub-header-list
       padding 0 9%
       @media screen and (min-width: 1200px)
-        padding 0 1%
+        padding 0 8px
 
   &.city-select
     .button-text
